# fast_1brc

./: Cargo.toml  README.md
generate-dataset/: Cargo.toml
generate-dataset/src/: main.rs
src/: main.rs
