[package]
name = "fast_1brc"
version = "0.1.0"
edition = "2021"

[dependencies]
crossbeam = "0.8.4"
fast-float = "0.2.0"
fxhash = "0.2.1"
memchr = "2.7.4"
num_cpus = "1.16.0"
tikv-jemallocator = "0.6.0"

[features]
default = []
simd = []

[workspace]
members = ["generate-dataset"]
resolver = "2"
package = { publish = false, edition = "2021" }

[profile.release]
debug = false
lto = true
codegen-units = 1
panic = "abort"
